Update login page
adding the hint for the username and password

--- a/1-Login.html
+++ b/1-Login.html
@@ -24,11 +24,11 @@
 
         </header>
         <form id="loginForm">
-            <label> Username </label>
+            <label> Username (the username is: admin)</label>
             <br>
             <input type="text" id="username" placeholder="Please Enter Your Username">
             <br>
-            <label> Password </label>
+            <label> Password (the Password is: 12345)</label>
             <br>
             <input type="password" id="password" placeholder="Please Enter Your Password">
             <br>
